package ArkhitekturaPO.Practical_3.Phonebook;

public interface ContactReader {
    void readContacts(String csvFile);
}
