package ArkhitekturaPO.Practical_3.Phonebook;

public interface ContactWriter {
    void writeContact(String name, String surname, String phone);
}
